tests/compile_failures/classes/literal_values.stderr
error: literals are not supported
 --> tests/compile_failures/classes/literal_values.rs:3:11
  |
3 | #[classes(42)]
  |           ^^

error: literals are not supported
 --> tests/compile_failures/classes/literal_values.rs:6:11
  |
6 | #[classes("42")]
  |           ^^^^
